--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "node --max_old_space_size=16384 node_modules/jest/bin/jest.js --runInBand"
   },
   "devDependencies": {
     "@types/jest": "^29.5.6",
